# Todo-application-by-Claude

./: .gitignore  README.md  package.json  railway.json  skills.md  vercel.json
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  frontend-component-builder.md  project-bootstrap.md  reusable-subagent-architect.md  spec-writer.md  sqlmodel-schema-designer.md  task-manager.md
.specify/memory/: constitution.md
backend/: main.py  package.json  pyproject.toml  requirements.txt
backend/src/: auth.py  crud.py  main.py  models.py
frontend/: next.config.js  package.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/signin/: page.jsx
frontend/app/signup/: page.jsx
frontend/app/tasks/: page.jsx
frontend/app/tasks/[id]/: page.jsx
frontend/components/: TaskForm.jsx  TaskList.jsx
frontend/lib/: auth.js
frontend/utils/: api.js
history/prompts/add_task/: 001-add-task-spec.spec.prompt.md  001-implement-add-task-skill.green.prompt.md
history/prompts/cli-todo-app/: 0001-cli-todo-app-implementation-complete.green.prompt.md  001-create-cli-todo-spec.spec.prompt.md  002-create-cli-todo-plan.plan.prompt.md  003-create-cli-todo-tasks.tasks.prompt.md
history/prompts/constitution/: 001-update-project-constitution.constitution.prompt.md
specs/cli-todo-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/features/: add_task.md  delete_task.md  mark_task_complete.md  update_task.md  view_task_list.md
src/: main.py  todo_manager.py
tests/integration/: test_cli_interface.py
tests/unit/: test_todo_manager.py
(+2 files in other folders)
